# ezop

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  lefthook.yml
.github/workflows/: platform.yml  sdk.yml  ui.yml
docs/: DEVELOPERS-GUIDE.md
ezop-light-ui/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  auth.ts  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
ezop-light-ui/.github/workflows/: ci.yaml
ezop-light-ui/app/: globals.css  layout.tsx  page.tsx
ezop-light-ui/e2e/: constants.ts  fixtures.ts  global-setup.ts  global-teardown.ts
ezop-light-ui/playwright-report/: index.html
ezop-light-ui/prisma/: schema.prisma
ezop-platform/: .env.example  Dockerfile  Makefile  Procfile  conftest.py  pyproject.toml  requirements.txt
ezop-platform/app/: auth.py  config.py  gatekeeper.py  main.py  schemas.py
ezop-platform/database/: README.md
ezop-platform/docs/: openapi.json  supabase-to-sqlalchemy-migration.md
ezop-platform/tests/: conftest.py  test_agents.py  test_auth.py  test_gatekeeper.py  test_health.py  test_models.py  test_runs.py  test_spans.py
ezop-sdk/: .gitignore  CONTRIBUTING.md  README.md
ezop-sdk/python/: Makefile  README.md  pyproject.toml
ezop-sdk/python/docs/: README.md
ezop-sdk/python/examples/: 01-basic.py  02-nested-spans.py  03-trigger-types.py
ezop-sdk/python/ezop/: __init__.py  agent.py  client.py  config.py  models.py
ezop-sdk/python/tests/: test_agent.py
(+101 files in other folders)
