[project]
name = "ezop"
version = "0.0.21a"
description = "Ezop SDK - The story of every AI agent"
authors = [{ name = "Ezop, Inc", email = "support@ezop.ai" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "responses",
    "twine",
    "build",
    "ruff",
    "pyright",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle, pyflakes, isort

[tool.pyright]
pythonVersion = "3.9"
include = ["ezop"]